--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -6,7 +6,7 @@
     </mat-expansion-panel-header>
     <p>{{ post.content }}</p>
     <div class="post-image">
-      <img src="post.imagePath" [alt]="post.title">
+      <img [src]="post.imagePath" [alt]="post.title">
     </div>
     <mat-action-row *ngIf="userIsAuth && userId == post.creator">
       <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
