--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,9 +1,12 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
-  <mat-expansion-panel *ngFor="let post of posts">
+  <mat-expansion-panel *ngFor="let post of posts.slice().reverse()">
     <mat-expansion-panel-header>
       {{ post.title }}
     </mat-expansion-panel-header>
+    <mat-panel-description>
+      Posted By: {{ post.userName }} ,On: {{ post.postDate }}
+    </mat-panel-description>
     <p>{{ post.content }}</p>
     <div class="post-image">
       <img [src]="post.imagePath" [alt]="post.title">
