Add Google maps Basics
google maps that ready to get latitude and longitude of a post

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,5 +16,8 @@
       <li *ngIf="userIsAuth">
         <button mat-button (click)="onLogout()">Logout</button>
       </li>
+      <li>
+        <a mat-button routerLink="map" routerLinkActive="mat-accent">map</a>
+      </li>
     </ul>
   </mat-toolbar>
