--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,15 @@
       <li *ngIf="userIsAuth">
         <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
       </li>
+
+      <li *ngIf="userIsAuth">
+        <a mat-button routerLink="/comments/create" routerLinkActive="mat-accent">New Comment</a>
+      </li>
+
+      <li *ngIf="userIsAuth">
+        <a mat-button routerLink="/commentsList" routerLinkActive="mat-accent">Comments list</a>
+      </li>
+
       <li *ngIf="!userIsAuth">
         <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
       </li>
