--- a/src/app/comments/comment-list/comment-list.component.html
+++ b/src/app/comments/comment-list/comment-list.component.html
@@ -1,20 +1,24 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
+
+<!-- <div *ngIf= "loadComments()"></div> -->
 <mat-accordion multi="true" *ngIf="comments.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let comment of comments.slice().reverse()">
-    <mat-expansion-panel-header>
-      {{ comment.title }}
-    </mat-expansion-panel-header>
-    <mat-panel-description>
-      Commented By: {{ comment.userName }} ,On: {{ comment.commentDate }}
-    </mat-panel-description>
-    <p>{{ comment.content }}</p>
 
-    <mat-action-row *ngIf="userIsAuth && userId == comment.creator">
-      <a mat-button color="primary" [routerLink]="['/comments/edit', comment.id]">EDIT</a>
-      <button mat-button color="warn" (click)="onDelete(comment.id)">DELETE</button>
-    </mat-action-row>
+      <mat-expansion-panel-header>
+        {{ comment.title }}
+      </mat-expansion-panel-header>
+      <mat-panel-description>
+        Commented By: {{ comment.userName }} ,On: {{ comment.commentDate }}
+      </mat-panel-description>
+      <p>{{ comment.content }}</p>
+
+      <mat-action-row *ngIf="userIsAuth && userId == comment.creator">
+        <a mat-button color="primary" [routerLink]="['/comments/edit', comment.id]">EDIT</a>
+        <button mat-button color="warn" (click)="onDelete(comment.id)">DELETE</button>
+      </mat-action-row>
   </mat-expansion-panel>
 </mat-accordion>
+
 <mat-paginator [length]="totoalComments" [pageSize]="commentsPerPage" [pageSizeOptions]="pageSizeOptions"
   (page)="onChangePage($event)" *ngIf="comments.length > 0"></mat-paginator>
 <p class="info-text mat-body-1" *ngIf="comments.length <= 0 && !isLoading">No comments added yet!</p>
