--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -17,13 +17,18 @@
     <div class="post-image">
       <img [src]="post.imagePath" [alt]="post.title">
     </div>
-    <mat-action-row *ngIf="userIsAuth && userId == post.creator">
-      <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
-      <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
-    </mat-action-row>
-    <a mat-button color="primary" [routerLink]="['comments/create/', post.id]">COMMENT</a>
+    <mat-action-row>
+      <a mat-button color="primary" [routerLink]="['comments/list/', post.id]">Post comments</a>
 
-  </mat-expansion-panel>
+      <div *ngIf="userIsAuth">
+        <div *ngIf="userId == post.creator">
+          <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+          <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+        </div>
+        <a mat-button color="primary" [routerLink]="['comments/create/', post.id]">COMMENT</a>
+      </div>
+    </mat-action-row>
+    </mat-expansion-panel>
 </mat-accordion>
 <mat-paginator [length]="totoalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions"
   (page)="onChangePage($event)" *ngIf="posts.length > 0"></mat-paginator>
