make image not required in posts

--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -14,7 +14,7 @@
       Posted By: {{ post.userName }} ,On: {{ post.postDate }}
     </mat-panel-description>
     <p>{{ post.content }}</p>
-    <div class="post-image">
+    <div class="post-image" *ngIf="post.imagePath!=null">
       <img [src]="post.imagePath" [alt]="post.title">
     </div>
     <mat-action-row>
