--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,5 +20,8 @@
       <li>
         <a mat-button routerLink="map" routerLinkActive="mat-accent">map</a>
       </li>
+      <li>
+          <a mat-button routerLink="d3" routerLinkActive="mat-accent">d3</a>
+      </li>
     </ul>
   </mat-toolbar>
