add scraps list

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,10 +18,13 @@
         <button mat-button (click)="onLogout()">Logout</button>
       </li>
       <li>
-        <a mat-button routerLink="map" routerLinkActive="mat-accent">map</a>
+        <a mat-button routerLink="map" routerLinkActive="mat-accent">Map</a>
       </li>
       <li>
-          <a mat-button routerLink="d3" routerLinkActive="mat-accent">d3</a>
+          <a mat-button routerLink="d3" routerLinkActive="mat-accent">D3</a>
       </li>
+      <li>
+        <a mat-button routerLink="scraps" routerLinkActive="mat-accent">Scraps</a>
+    </li>
     </ul>
   </mat-toolbar>
