--- a/src/app/map/map-google/map.component.html
+++ b/src/app/map/map-google/map.component.html
@@ -1,11 +1,10 @@
 <h1>Angular Google Maps (AGM) Demo</h1>
-<p><a href="https://angular-maps.com/" target="_blank">Official Website</a></p>
 
 <agm-map [latitude]="lat" [longitude]="lng" [disableDefaultUI]="false" [zoomControl]="false">
 
   <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m.label, i)" [latitude]="m.lat"
-    [longitude]="m.lng" [label]="m.label" [markerDraggable]="m.draggable">
-
+    [longitude]="m.lng"  [markerDraggable]="m.draggable">
+<!--[label]="m.label"-->
     <agm-info-window>
       <strong>{{m.label}}</strong>
     </agm-info-window>
