add auto login after sign up

--- a/src/app/map/map-google/map.component.html
+++ b/src/app/map/map-google/map.component.html
@@ -1,4 +1,4 @@
-<h1>Angular Google Maps (AGM) Demo</h1>
+<h1>Angular Google Maps</h1>
 
 <agm-map [latitude]="lat" [longitude]="lng" [disableDefaultUI]="false" [zoomControl]="false">
 
