--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,6 +24,9 @@
           <a mat-button routerLink="d3" routerLinkActive="mat-accent">D3</a>
       </li>
       <li>
+        <a mat-button routerLink="mapReduceD3" routerLinkActive="mat-accent">mapReduceD3</a>
+      </li>
+      <li>
         <a mat-button routerLink="scraps" routerLinkActive="mat-accent">Scraps</a>
       </li>
       <li *ngIf="userIsAuth">
