updated the AhoCorasick page.

--- a/src/app/scraps/scrap-list/scrap-list.component.html
+++ b/src/app/scraps/scrap-list/scrap-list.component.html
@@ -1,7 +1,11 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 
+<div class="form-group">
+  <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchStr"/>
+</div>
+
 <mat-accordion multi="true" *ngIf="scraps.length > 0 && !isLoading">
-  <mat-expansion-panel *ngFor="let scrap of scraps.slice().reverse()">
+  <mat-expansion-panel *ngFor="let scrap of scraps.slice().reverse() | ScrapFilter:searchStr">
     <mat-expansion-panel-header>
       {{ scrap.title }}
     </mat-expansion-panel-header>
