--- a/src/app/mapReduceD3/mapReduceD3.component.html
+++ b/src/app/mapReduceD3/mapReduceD3.component.html
@@ -1,6 +1,6 @@
 <div *ngIf='show'>
     <h1 class="m-auto">We just want to show something:</h1>
-    <svg appPiechart [data]="data"></svg>
+    <svg appPiechartMap [data]="data"></svg>
 </div>
 <div *ngIf='!show'>
     <h1 class="m-auto">There are no Posts</h1>
