--- a/src/app/mapReduceD3/mapReduceD3.component.html
+++ b/src/app/mapReduceD3/mapReduceD3.component.html
@@ -1,5 +1,5 @@
 <div *ngIf='show'>
-    <h1 class="m-auto">We just want to show something:</h1>
+    <h1 class="m-auto">Posts Title Pie Chart (using Map Reduce):</h1>
     <svg appPiechartMap [data]="data"></svg>
 </div>
 <div *ngIf='!show'>
