--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,16 +1,12 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
-<div>
-  <p>
-   <li>Current post create: {{curentCreateTimes}}</li>
-   <li>Current post delete: {{currentDeleteTimes}}</li>
-  </p>
-</div>
+
 <div class="form-group">
   <input type="text" class="form-control" placeholder="Search By Title" [(ngModel)]="searchTermByTitle"/>
   <input type="text" class="form-control" placeholder="Search By Content" [(ngModel)]="searchTermByContent"/>
 </div>
 
-<mat-checkbox (click)="searchTermByimage = !searchTermByimage">include picture</mat-checkbox>
+<button *ngIf="searchTermByimage" (click)="searchTermByimage = !searchTermByimage">Includes picture only</button>
+<button *ngIf="!searchTermByimage" (click)="searchTermByimage = !searchTermByimage">Show all</button>
 
 <mat-accordion multi="true" *ngIf="posts.length > 0 && !isLoading">
   <mat-expansion-panel *ngFor="let post of posts.slice().reverse() | PostTitleFilter:searchTermByTitle | postContentFilter:searchTermByContent|postImageFilter:searchTermByimage">
@@ -40,3 +36,10 @@
 <mat-paginator [length]="totoalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions"
   (page)="onChangePage($event)" *ngIf="posts.length > 0"></mat-paginator>
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
+
+<div>
+  <p>
+   <li>Current post create: {{curentCreateTimes}}</li>
+   <li>Current post delete: {{currentDeleteTimes}}</li>
+  </p>
+</div>
