--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar color="primary">
+
+    <span *ngIf="userIsAuth&&isAdmin">
+      Admin &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </span>
     <span>
-      <a routerLink="/">Post List</a>
+      <a routerLink="/">Posts List</a>
     </span>
     <span class="spacer"></span>
     <ul>
@@ -14,16 +18,13 @@
       <li *ngIf="!userIsAuth">
         <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">Signup</a>
       </li>
-      <li *ngIf="userIsAuth">
-        <button mat-button (click)="onLogout()">Logout</button>
-      </li>
-      <li *ngIf="userIsAuth">
+      <li *ngIf="userIsAuth&&isAdmin">
         <a mat-button routerLink="map" routerLinkActive="mat-accent">Map</a>
       </li>
-      <li *ngIf="userIsAuth">
-          <a mat-button routerLink="d3" routerLinkActive="mat-accent">D3</a>
+      <li *ngIf="userIsAuth&&isAdmin">
+          <a mat-button routerLink="d3" routerLinkActive="mat-accent">D3 using groupBy</a>
       </li>
-      <li *ngIf="userIsAuth">
+      <li *ngIf="userIsAuth&&isAdmin">
         <a mat-button routerLink="mapReduceD3" routerLinkActive="mat-accent">D3 using mapReduce</a>
       </li>
       <li *ngIf="userIsAuth">
@@ -31,6 +32,9 @@
       </li>
       <li *ngIf="userIsAuth">
         <a mat-button routerLink="/chat" routerLinkActive="mat-accent">Chat</a>
+      </li>
+      <li *ngIf="userIsAuth">
+        <button mat-button (click)="onLogout()">Logout</button>
       </li>
     </ul>
   </mat-toolbar>
