--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -16,7 +16,7 @@ mat-paginator{
 }
 
 .post-image {
-  width: 100%
+  width: 50%
 }
 
 .post-image img {
@@ -25,6 +25,12 @@ mat-paginator{
 }
 
 form-control {
+  width: 300px;
+  border: 2px groove;
+  border-radius: 4px;
+}
+
+my-form {
   width: 300px;
   border: 2px groove;
   border-radius: 4px;
