--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -39,4 +39,6 @@
   (page)="onChangePage($event)" *ngIf="posts.length > 0"></mat-paginator>
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading">No posts added yet!</p>
 
-<p class="form-control">Current post create: {{curentCreateTimes}}  ●   Current post delete: {{currentDeleteTimes}}</p>
+<p class="form-control">Current post create: {{curentCreateTimes}} &nbsp;&nbsp; ● &nbsp;&nbsp;  Current post delete: {{currentDeleteTimes}}</p>
+
+<a class="form-control" *ngIf="curentCreateTimes>0 && currentDeleteTimes>0">&nbsp;&nbsp; ● &nbsp;&nbsp;Created versus deleted:&nbsp;{{(curentCreateTimes/currentDeleteTimes)*100}}% </a>
