--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -41,4 +41,4 @@
 
 <p class="form-control">Current post create: {{curentCreateTimes}} &nbsp;&nbsp; ● &nbsp;&nbsp;  Current post delete: {{currentDeleteTimes}}</p>
 
-<a class="form-control" *ngIf="curentCreateTimes>0 && currentDeleteTimes>0">&nbsp;&nbsp; ● &nbsp;&nbsp;Created versus deleted:&nbsp;{{(curentCreateTimes/currentDeleteTimes)*100}}% </a>
+<a class="form-control" *ngIf="curentCreateTimes>0 && currentDeleteTimes>0"> &nbsp;&nbsp;Created versus deleted:&nbsp;{{(curentCreateTimes/currentDeleteTimes)*100}}% </a>
